# investments

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test.ipynb  ts1.csv  ts2.csv
catalog/: sources.toml
config/: config.toml
data/01_raw/: cdi.csv
data/01_raw/fundos/: 17.453.850_0001-48_2021.csv  17.453.850_0001-48_2022.csv  17.453.850_0001-48_2023.csv  2023.csv  21.185.984_0001-00_2021.csv  21.185.984_0001-00_2022.csv  21.185.984_0001-00_2023.csv  23.565.803_0001-99_2021.csv  23.565.803_0001-99_2022.csv  23.565.803_0001-99_2023.csv  28.947.266_0001-65_2021.csv  28.947.266_0001-65_2022.csv  28.947.266_0001-65_2023.csv  32.319.351_0001-56_2021.csv  32.319.351_0001-56_2022.csv  32.319.351_0001-56_2023.csv  36.318.479_0001-56_2021.csv  36.318.479_0001-56_2022.csv  36.318.479_0001-56_2023.csv
data/01_raw/fundos_imobiliários/: 2022.csv  2024.csv
data/02_preprocessed/: funds.csv
data/03_models/: time_series.pkl
data/04_outputs/: convex_hull.html  risk_return.html  scatter.html
investments/: config.py  config_schema.py  main.py  models.py  outputs.py  paths.py  portfolio.py  preprocess.py  raw_data_schema.py
investments/models/: main.py
investments/outputs/: main.py
investments/preprocess/: main.py
investments/timeseries/: main.py
tests/: conftest.py  test_pipeline.py  test_portfolio.py
