[tool.poetry]
name = "investments"
version = "0.1.0"
description = ""
authors = ["AloizioMacedo <atsam2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
pydantic = "^2.6.1"
plotly = "^5.18.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
